# squirrel

./: Cargo.toml  README.md
.cargo/: config.toml
crates/client-sdk/: Cargo.toml
crates/column-store/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/graph-engine/: Cargo.toml
crates/meta-service/: Cargo.toml
crates/meta-service/src/: create_table.rs  lib.rs
crates/storage-engine/: Cargo.toml
crates/storage-engine/src/: file_column.rs  lib.rs  memory.rs
