[workspace]

members = [
    "crates/core",           # 核心抽象接口
    "crates/storage-engine", # 存储引擎实现
    "crates/query-engine",   # 查询服务
    "crates/server",         # 网络服务
    "crates/cli",            # 命令行
    "crates/client-sdk",     # 客户端-sdk
    "libs/common",           # 公共工具库
    "libs/protocol"          # 通信协议定义
]

default-members = [
    "crates/core",
    "crates/storage-engine"
]

resolver = "2"





